--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,11 @@
     <script>
         async function synthesizeText() {
             const text = document.getElementById("text").value;
-            const response = await fetch('/synthesize/', {
+
+            // デプロイされたURLを指定
+            const baseUrl = "https://dnn-fastapi.onrender.com";
+
+            const response = await fetch(`${baseUrl}/synthesize/`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
